# AdvancedOOP

./: .gitignore  CMakeLists.txt
hw1/: BattleshipGameAlgo.cpp  BattleshipGameAlgo.h  Bonus.cpp  Bonus.h  BonusLib.cpp  BonusLib.h  CMakeLists.txt  CmakeLists.txt  IBattleshipGameAlgo.h  ISubmarinesGameAlgo.h  Player.cpp  Player.h  Ship.cpp  Ship.h  game.sboard  inputUtilities.cpp  inputUtilities.h  main.cpp  movesA.attack-a  movesB.attack-b  students.txt  test.attack-a  test.sboard
hw1/input/: clean_movesA.attack-a  clean_movesB.attack-b
